fpo-web/src/_survey.scss
@import "variables";

// survey styles

.survey-container {
  font-size: 16px;
  .sv_page_description {
    margin-bottom: 10px;
  }
  label{ color: $text-color;}
  .sv_container {
    > .panel-heading, > .panel-body {
      padding: 0;
    }
  }
// as per Jack they don't want this heading here, just hiding it until
// dev can remove
.sv_container h3{display: none;}

  h3 {
    font-size: 34px;
    font-weight: 600;
  }

h4.sv_page_title {
  color: $gov-navy-blue;
  font-size: 2.25em;
  margin: .65em 0 .5em;
  }

  .sv_p_title {
    border-bottom: 2px solid $gov-light-grey;
    font-size: 20px;
    font-weight: 600;
    margin: 5px 0.3em 1.6rem;
    padding-bottom: 3px;
    padding-left: 0.5em;
  }
  .sv_row {
    margin: .65em 0 .85em;
  }
  .sv_page .sv_qstn {
    padding-top: 0;
    padding-bottom: 1em;
  }
  .sv_page > .sv_row {
    margin: 1em 0;
  }
  .sv_page > .sv_row > .sv_qstn {
    border: 1px solid #ccc;
    border-radius: 5px;
    padding-top: 1em;
    //when there is another panel inside
    .sv_p_container{border: none; padding: .5em 0; .sv_qstn{margin-left: -15px;}}
  }
  .sv_q_title {
    color: #556077;
    font-size: 1.75em;
    line-height: 1.2;
    margin-bottom: 1em;
    margin-top: 5px;
  }
  .sv_q_description {
    font-size: 16px;
    margin-bottom: 1.5em;
    }
  .panel-footer {
    background: none;
    border: none;
    padding: 0;
  }
  .form-control {
    font-size: 16px;
  }
  .survey-address-line + .survey-address-line {
    margin-top: 0.8em;
  }
  .survey-address-label {
    font-size: 16px;
    font-weight: normal;
  }
}

.sv_p_container {
  // survey panel
  background: $gov-white;
  border: 1px solid $gov-light-grey;
  border-radius: 8px;
  padding: 1em 0.5em 0.5em;
  margin: 0.5em 0;
  // when a container is inside another one;
  .sv_p_container{border: none; padding: 1em 0 .5em;}
}

// checkbox styles
.sv-checkbox-label {
  cursor: pointer;
  font-size: 110%;
  font-weight: normal;
  padding-left: 0.25em;
}
.sv_bootstrap_css .sv_qcbc input[type="checkbox"], .sv_bootstrap_css .sv_qcbc input[type="radio"] {
  vertical-align: baseline;
  margin: 4px;
}

.survey-helptext, .survey-infotext {
  background: #e7efff;
  border: 1px solid #c9d0e3;
  border-radius: 4px;
  margin: 0.5em 0 0 0;
  padding: .5em;
  line-height: 1.4;
  .fa {
    color: $gov-navy-blue;
    font-size: 20px;
  }
  .panel-heading {
    color: #55555a;
    padding-left: 2em;
  }
  .panel-title {
    display: block;
    font-size: 18px;
  }
  .panel-body {
    background: $gov-white;
    border: 1px solid #e0e3e9;
    border-radius: 2px;
    margin: 0 5px 5px 5px;
    padding: 10px;
  }
  .heading-icon {
    float: left;
    margin-left: -1.4em;
    margin-right: 0.5em;
    margin-top: 3px;
  }
  .heading-expand {
    float: right;
  }
  .accept-row {
    padding-left: 5px;
  }
}

.survey-expander {
  .panel-title {
    cursor: pointer;
  }
  .panel-body {
    display: none;
  }
  &.expanded .panel-body {
    display: block;
  }
}

.survey-inlinetext {
  background: transparent;
  margin: 0;
  .fa {
    color: $gov-navy-blue;
    font-size: 20px;
  }
  .panel-heading {
    padding: 0;
  }
  .panel-body {
    padding: 1em 0 0 0;
  }
  .panel-title {
    color: $text-color-link;
    font-size: 18px;
    font-weight: normal;
    outline: none;
  }
  .heading-icon {
    float: left;
    margin-right: 0.5em;
  }
  .heading-expand {
    font-size: 90%;
    margin-left: 1em;
  }
  .panel-title:hover, .panel-title:focus {
    color: $text-color-link-hover;
  }
}

.survey-infotext.error {
  background: #f6e4e6;
  border-color: #e6d0c9;
  .panel-heading {
    color: #5a5555;
  }
  .fa {
    color: #c33;
  }
}

.survey-helptext {
  background: #faf5e6;
  border: 1px solid #d8d0d0;
  .fa {
    color: #875;
  }
  .panel-heading {
    color: #5a5555;
  }
  .panel-title {
    cursor: pointer;
  }
  .panel-body {
    background: #fff;
    border: 1px solid #e9e0e0;
  }
}

.survey-yesno {
  position: relative;
  input {
    position: absolute;
    visibility: hidden;
  }
  span {
    background: #eee;
    border: 2px solid #ccc;
    border-radius: 50%;
    color: #666;
    cursor: pointer;
    display: block;
    font-size: 20px;
    height: 60px;
    line-height: 60px;
    margin-top: 4px;
    margin-right: 0.8em;
    overflow: hidden;
    text-align: center;
    text-transform: uppercase;
    width: 60px;
    user-select: none;
  }
  input + span:hover {
    border-color: #38598a;
    box-shadow: 0 1px 2px 1px rgba(#000, 0.1);
    color: #38598a;
  }
  input:checked + span {
    background: #38598a;
    border: 2px solid #ccc;
    color: #fff;
  }
}

.survey-personname {
  .accept-row {
    padding-top: 0.8em;
  }
}

.glossary-link::after {
  content: "\F059";
  font: normal normal normal 14px/1 FontAwesome;
  font-size: 90%;
  padding-left: 0.25em;
}

